--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -4,13 +4,13 @@
 
 <div class='container'>
     <div class="tab">
-        <button class="tablinks" onclick="openCity(event, 'Chest')" id="defaultOpen">Chest</button>
-        <button class="tablinks" onclick="openCity(event, 'Back')">Back</button>
-        <button class="tablinks" onclick="openCity(event, 'Legs')">Legs</button>
-        <button class="tablinks" onclick="openCity(event, 'Shoulders')">Shoulders</button>
-        <button class="tablinks" onclick="openCity(event, 'Triceps')">Triceps</button>
-        <button class="tablinks" onclick="openCity(event, 'Biceps')">Biceps</button>
-        <button class="tablinks" onclick="openCity(event, 'Abs')">Abs</button>
+        <button class="tablinks" onclick="openTab(event, 'Chest')" id="defaultOpen">Chest</button>
+        <button class="tablinks" onclick="openTab(event, 'Back')">Back</button>
+        <button class="tablinks" onclick="openTab(event, 'Legs')">Legs</button>
+        <button class="tablinks" onclick="openTab(event, 'Shoulders')">Shoulders</button>
+        <button class="tablinks" onclick="openTab(event, 'Triceps')">Triceps</button>
+        <button class="tablinks" onclick="openTab(event, 'Biceps')">Biceps</button>
+        <button class="tablinks" onclick="openTab(event, 'Abs')">Abs</button>
     </div>
 
     <div id="Chest" class="tabcontent">
@@ -312,5 +312,4 @@
 
 </div>
 
-<script src='/js/workout.js'></script>
 <% include partials/footer%>
