--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,7 +20,7 @@
                         </div>
 
                         <div class="form-group">
-                            <input type="text" name="phone-number" id="phone-number" class="form-control input-sm" placeholder="Phone Number" minlength='1' maxlength='32' required>
+                            <input type="text" name="phone-number" id="phone-number" onkeypress="return event.charCode >= 48 && event.charCode <= 57" minlength="1" maxlength="10" class="form-control input-sm" placeholder="Phone Number" required>
                         </div>
 
                         <div class="row">
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         
-                        <input type="submit" value="Register" class="btn btn-info btn-block sign-up-button">
+                        <input type="submit" value="Register" class="btn btn-info btn-block sign-up-button" onclick="validateSignUp()">
                     
                     </form>
                 </div>
@@ -44,7 +44,5 @@
         </div>
     </div>
 </div>
-
-<script src='/js/signup.js'></script>
 
 <% include partials/footer %> 
