--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -19,6 +19,8 @@
         <li><a href="/history">History</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="/update-profile">Update Profile</a></li>
+        <li><a href="/change-password">Change Password</a></li>
         <li><a href="/signout">Sign Out</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
