--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -17,6 +17,7 @@
         <li class="active"><a href="/workout">Workout <span class="sr-only">(current)</span></a></li>
         <li><a href="/log">Log</a></li>
         <li><a href="/history">History</a></li>
+        <li><a href="/contactus">Contact Us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/update-profile">Update Profile</a></li>
