--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,13 +19,13 @@ html,body {
     font-size: 16px;
 }
 
-body.main{
+/* body.main{
     background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0, 0, 0, 0.8)),url("../img/background.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-}
+} */
 
 .responsive-form {
   width: 45%;
