--- a/views/modify-user.ejs
+++ b/views/modify-user.ejs
@@ -33,19 +33,16 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="new-password">New Password</label>
+                <div>
+                    <label for="status">Membership Status</label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                        <input type="password" name="new-password" id="new-password" minlength="6" maxlength="32" class="form-control input-lg" placeholder="Enter New Password">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="confirm-password">Confirm Password</label>
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                        <input type="password" name="confirm-password" id="confirm-password" minlength="6" maxlength="32" class="form-control input-lg" placeholder="Enter New Password Again">
+                        <span class="input-group-addon"><i class="fa fa-id-card"></i></span>
+                        <select name="status" id="status" class="form-control input-lg">                                
+                            <% var status = ['Active','Inactive'];
+                            status.forEach(function(current){ %>
+                                <option value= '<%=  current %>' <%= User.isMember  ? '' : 'selected'%> > <%=  current %> </option>
+                            <% });%>
+                        </select>
                     </div>
                 </div>
 
