--- a/views/view-user.ejs
+++ b/views/view-user.ejs
@@ -14,6 +14,7 @@
             <th> Name </th>
             <th> Username </th>
             <th> Phone Number </th>
+            <th> MembershipStatus</th>
             <th> Edit </th>
             <th> Delete </th>
 
@@ -24,6 +25,9 @@
                         <td><%= current.name%></td>
                         <td><%= current.username%></td>
                         <td><%= current.phoneNumber%></td>
+                        <td> 
+                            <%= current.isMember ? 'Active' : 'Inactive'; %>
+                        </td>
                         <td>
                             <form action='/admin/user/<%=current._id%>/modify%>' method='get'>
                                 <button class='icon' onclick='validateAction()'> <i class="fa fa-pencil"></i> </button>
