Added AdminLTE and client side validation

--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -4,6 +4,8 @@
 
     <% include partials/_messages%>
 
+    <h3 align="center"> Admin Login </h3>
+
     <form class="sign-in-form responsive-form" method="post" action="/admin/login">
         <div class="form-group">
             <label for="username">Username</label>
