--- a/views/new-user.ejs
+++ b/views/new-user.ejs
@@ -1,6 +1,10 @@
 <% include partials/header %>
-
-<% include partials/admin-navigation %>
+<div class="hold-transition skin-purple sidebar-mini">
+    <% include partials/admin-header%>
+    <div class="wrapper">
+    <%include partials/admin-sidebar%>
+        <div class="content-wrapper">
+                <section class="content container-fluid">
 
     <div class='admin-main'>
 
@@ -54,5 +58,8 @@
     </div>
 
 </div>
-
+</section>
+</div>
+</div>
+</div>
 <% include partials/footer%>
