--- a/views/view-item.ejs
+++ b/views/view-item.ejs
@@ -1,15 +1,18 @@
 <% include partials/header %>
-
-<% include partials/admin-navigation %>
-
+<div class="hold-transition skin-purple sidebar-mini">
+    <% include partials/admin-header%>
+    <div class="wrapper">
+    <%include partials/admin-sidebar%>
+        <div class="content-wrapper">
+                <section class="content container-fluid">
 <div class='admin-main'>
 
     <% include partials/_messages %>
 
     <div class="table-responsive">
 
-        <table class='table table-striped table-condensed'>
-        
+        <table id="item-table" class='table table-striped table-condensed'>
+        <thead>
             <th> Item ID </th>
             <th> Name </th>
             <th> Category </th>
@@ -18,7 +21,8 @@
             <th> Total </th>
             <th> Edit </th>
             <th> Delete </th>
-
+        </thead>
+        <tbody>
             <% if(Item && Item.length > 0){
                  Item.forEach(function(current){ %>
                     <tr>
@@ -44,11 +48,16 @@
 
                 <% });
              } %>
-
+            </tbody>
         </table>
-
     </div>
-
+</section>
 </div>
-
+</div>
+</div>
 <% include partials/footer%>
+<script>
+$('#item-table').DataTable({
+"lengthMenu": [ 10,15,20 ]
+});
+</script>
