--- a/views/view-user.ejs
+++ b/views/view-user.ejs
@@ -1,52 +1,58 @@
 <% include partials/header %>
+<div class="hold-transition skin-purple sidebar-mini">
+    <% include partials/admin-header%>
+    <div class="wrapper">
+    <%include partials/admin-sidebar%>
+        <div class="content-wrapper">
+                <section class="content container-fluid">
+                    <div class='admin-main'> 
+                    <% include partials/_messages %>
+                    <div class="table-responsive">
+                        <table id="user-table" class='table table-striped table-condensed'>
+                            <thead>
+                                <th> User ID </th>
+                                <th> Name </th>
+                                <th> Username </th>
+                                <th> Phone Number </th>
+                                <th> Membership Status</th>
+                                <th> Edit </th>
+                                <th> Delete </th>
+                            </thead>
+                            <tbody>
+                            <% if(users && users.length > 0){%>
+                                <% users.forEach(function(current){ %>
+                                    <tr>
+                                        <td><%= current._id %></td>
+                                        <td><%= current.name%></td>
+                                        <td><%= current.username%></td>
+                                        <td><%= current.phoneNumber%></td>
+                                        <td> 
+                                            <%= current.isMember ? 'Active' : 'Inactive'; %>
+                                        </td>
+                                        <td>
+                                            <form action='/admin/user/<%=current._id%>/modify%>' method='get'>
+                                                <button class='icon' onclick='validateAction()'> <i class="fa fa-pencil"></i> </button>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <form action='/admin/user/<%=current._id%>/delete%>' method='post'>
+                                                <button class='icon' onclick='validateAction()'> <i class="fa fa-trash"></i> </button>
+                                            </form>
+                                        </td>
+                                    </tr>
 
-<% include partials/admin-navigation %>
-
-<div class='admin-main'>
-
-    <% include partials/_messages %>
-
-    <div class="table-responsive">
-
-        <table class='table table-striped table-condensed'>
-        
-            <th> User ID </th>
-            <th> Name </th>
-            <th> Username </th>
-            <th> Phone Number </th>
-            <th> MembershipStatus</th>
-            <th> Edit </th>
-            <th> Delete </th>
-
-            <% if(users && users.length > 0){%>
-                <% users.forEach(function(current){ %>
-                    <tr>
-                        <td><%= current._id %></td>
-                        <td><%= current.name%></td>
-                        <td><%= current.username%></td>
-                        <td><%= current.phoneNumber%></td>
-                        <td> 
-                            <%= current.isMember ? 'Active' : 'Inactive'; %>
-                        </td>
-                        <td>
-                            <form action='/admin/user/<%=current._id%>/modify%>' method='get'>
-                                <button class='icon' onclick='validateAction()'> <i class="fa fa-pencil"></i> </button>
-                            </form>
-                        </td>
-                        <td>
-                            <form action='/admin/user/<%=current._id%>/delete%>' method='post'>
-                                <button class='icon' onclick='validateAction()'> <i class="fa fa-trash"></i> </button>
-                            </form>
-                        </td>
-                    </tr>
-
-                <% });%>
-            <% } %>
-
-        </table>
-
+                                <% });%>
+                            <% } %>
+                            </tbody>        
+                        </table>
+                    </div>
+                </section>
+            </div>
     </div>
-
 </div>
-
 <% include partials/footer%>
+<script>
+    $('#user-table').DataTable({
+        "lengthMenu": [ 10,15,20 ]
+    });
+</script>
