--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,32 +1,37 @@
 <% include partials/header %>  
     <div id="login">
-        <h3 class="text-center text-white pt-5">Login form</h3>
         <div class="container">
                 <% include partials/_messages%>
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="/signin" method="post">
-                            <h3 class="text-center text-info">Login</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
-                                <input type="email" name="username" id="username" class="form-control" placeholder= "Enter Username" required>
+            <div class="container" style="margin : auto; padding-top: 50px;">
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4">
+                            <div class="panel panel-default">
+                                  <div class="panel-heading">
+                                    <h3 class="panel-title">Please sign in</h3>
+                                 </div>
+                                  <div class="panel-body">
+                                    <form id="login-form" class="form" action="/signin" method="post">
+                                        <div class="form-group">
+                                            <label for="username" class="text-info">Username:</label><br>
+                                            <input type="email" name="username" id="username" class="form-control" placeholder= "Enter Username" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="password" class="text-info">Password:</label><br>
+                                            <input type="password" name="password" id="password" class="form-control" minlength="6" maxlength="32" placeholder= "Enter Password" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                                        </div>
+                                        <br>
+                                        <div id="register-link" class="text-right">
+                                            <a href="/signup" class="text-info">Register here</a>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input type="password" name="password" id="password" class="form-control" minlength="6" maxlength="32" placeholder= "Enter Password" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-                            </div>
-                            <br>
-                            <div id="register-link" class="text-right">
-                                <a href="/signup" class="text-info">Register here</a>
-                            </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
 
