--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,6 @@
 <% include partials/header%>
 
-<div class="container">
+<!-- <div class="container">
     <div class="row centered-form">
     <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
         <div class="panel panel-default">
@@ -43,6 +43,49 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+<div class="container">
+    <% include partials/_messages%>
+    <form role="form" action='/signup' method='post'>
+                <h2 align="center">Registration Form</h2>
+
+                <div class="form-group">
+                    <label for="name" class="col-sm-3 control-label">Name</label>
+                    <div class="col-sm-9">
+                        <input type="text" name="name" id="name" class="form-control input-sm" placeholder="Name" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="phone-number" class="col-sm-3 control-label">Phone Number</label>
+                    <div class="col-sm-9">
+                        <input type="text" name="phone-number" id="phone-number" onkeypress="return event.charCode >= 48 && event.charCode <= 57" minlength="1" maxlength="10" class="form-control input-sm" placeholder="Phone Number" required>                        
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="email" class="col-sm-3 control-label">Email</label>
+                    <div class="col-sm-9">
+                            <input type="email" id="email" name="email" placeholder="Email" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-3 control-label">Password</label>
+                    <div class="col-sm-9">
+                            <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password" minlength='6' maxlength='32' required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-3 control-label">Confirm Password</label>
+                    <div class="col-sm-9">
+                            <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" minlength='6' maxlength='32' placeholder="Confirm Password" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-9 col-sm-offset-3">
+                        <input type="submit" value="Register" class="btn btn-info btn-block sign-up-button" onclick="validateSignUp()">
+                    </div>
+                </div>
+            </form> <!-- /form -->
+        </div> <!-- ./container -->
 
 <% include partials/footer %> 
